updates to maven run steps, and appended README.md